# Cobot-ws

./: README.md
mycobot_ros2/mycobot_280/mycobot_280/launch/: slider_control.launch.py
mycobot_ros2/mycobot_280/mycobot_280/mycobot_280/: simple_gui.py
mycobot_ros2/mycobot_280/mycobot_280_moveit2/: CMakeLists.txt  package.xml
mycobot_ros2/mycobot_280/mycobot_280_moveit2/config/: move_group_override.yaml
mycobot_ros2/mycobot_280/mycobot_280_moveit2/launch/: csvMove.launch.py  csv_moveit_rviz.launch.py  moveit_rviz.launch.py
mycobot_ros2/mycobot_280/mycobot_280_moveit2/scripts/: csv_publisher.py  csv_stream_control.py  planning_bridge.py
mycobot_ros2/mycobot_communication/: package.xml
mycobot_ros2/mycobot_description/: setup.py
mycobot_ros2/mycobot_description/urdf/: mycobot_gripper.urdf.xacro
